<resources>
    <string name="app_name">Food Hub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product">Product</string>
    <string name="add">Add</string>
    <string name="profile">Profile</string>
    <string name="report">Report</string>
    <string name="sattings">Sattings</string>
    <string name="logout">Logout</string>
    <string name="menu">Menu</string>
    <string name="mun">Mun</string>
    <string name="product_name">Product Name..?</string>
    <string name="product_description">Product Description..?</string>
    <string name="product_price">Product Price..?</string>
    <string name="product_amount">Product Amount..?</string>
    <string name="upload_product">Upload Product</string>
    <string name="upload">upload</string>
</resources>