<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/mun"
        android:icon="@drawable/round_density_medium_24"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:title="@string/report"
                android:id="@+id/report"
                android:icon="@drawable/business_analytics_icon"
                />

            <item
                android:title="@string/sattings"
                android:id="@+id/sattings"
                android:icon="@drawable/setting_icon"
                />
            <item
                android:title="@string/logout"
                android:id="@+id/logout"
                android:icon="@drawable/emergency_exit_icon"
                />

        </menu>


    </item>



</menu>