<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#F4F8F7"
    tools:context=".UploadProductFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/usprofile"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/user_profile_svgrepo_com" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_name"
            app:errorTextColor="@color/black"
            app:endIconMode="clear_text"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/productname"
                app:errorTextColor="#000"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorTextColor="@color/black"
            android:hint="@string/product_description"
            app:endIconMode="clear_text"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/productdescription"
                app:errorTextColor="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_price"
            app:errorTextColor="@color/black"
            app:endIconMode="clear_text"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="#000"
                android:id="@+id/productprice"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_amount"
            app:endIconMode="clear_text"
            app:errorTextColor="@color/black"
            android:layout_margin="10dp"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorTextColor="@color/black"
                android:id="@+id/productamount"
                android:inputType="number"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/uploadproduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upload"
            android:textSize="20dp"
            android:layout_marginHorizontal="120dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="#03A9F4"/>


    </LinearLayout>
</ScrollView>